--- a/app/src/main/res/layout/activity_profile_update.xml
+++ b/app/src/main/res/layout/activity_profile_update.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ProfileActivity">
+    tools:context=".ProfileUpdate">
 
     <TextView
         android:id="@+id/textView2"
@@ -34,8 +34,8 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.279" />
 
-    <TextView
-        android:id="@+id/namaProfile"
+    <EditText
+        android:id="@+id/namaUpdate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="nama"
@@ -43,10 +43,10 @@
         android:textSize="25dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.556"
+        app:layout_constraintHorizontal_bias="0.557"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.279" />
+        app:layout_constraintVertical_bias="0.257" />
 
     <TextView
         android:id="@+id/textView"
@@ -62,19 +62,19 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.357" />
 
-    <TextView
-        android:id="@+id/emailProfile"
-        android:layout_width="98dp"
-        android:layout_height="32dp"
+    <EditText
+        android:id="@+id/emailUpdate"
+        android:layout_width="87dp"
+        android:layout_height="45dp"
         android:text="email"
         android:textColor="#000"
         android:textSize="25dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.616"
+        app:layout_constraintHorizontal_bias="0.583"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.359" />
+        app:layout_constraintVertical_bias="0.346" />
 
     <TextView
         android:id="@+id/textView3"
@@ -90,8 +90,8 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.451" />
 
-    <TextView
-        android:id="@+id/passwordProfile"
+    <EditText
+        android:id="@+id/passwordUpdate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="password"
@@ -118,8 +118,8 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.542" />
 
-    <TextView
-        android:id="@+id/alamatProfile"
+    <EditText
+        android:id="@+id/alamatUpdate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="alamat"
@@ -146,8 +146,8 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.632" />
 
-    <TextView
-        android:id="@+id/nohpProfile"
+    <EditText
+        android:id="@+id/nohpUpdate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="nohp"
@@ -161,21 +161,21 @@
         app:layout_constraintVertical_bias="0.632" />
 
     <Button
-        android:id="@+id/profileUpdate"
+        android:id="@+id/updateBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Update"
+        android:text="Save"
         android:textColor="#000"
         android:textSize="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.765"
+        app:layout_constraintHorizontal_bias="0.813"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.84" />
 
     <Button
-        android:id="@+id/profileBack"
+        android:id="@+id/updateBack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Back"
