--- a/app/src/main/res/layout/activity_profile_update.xml
+++ b/app/src/main/res/layout/activity_profile_update.xml
@@ -62,7 +62,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.357" />
 
-    <TextView
+    <EditText
         android:id="@+id/emailUpdate"
         android:layout_width="87dp"
         android:layout_height="45dp"
